@@ -66,7 +66,7 @@ and the string .bak.tar.bz2 appended, e.g. `bash.bak.tar.bz2'.
 Display the help screen.
 .RE
 
-.BR -v ", " --version
+.BR -V ", " --version
 .RS
 Display version information.
 .RE
