@@ -44,7 +44,7 @@ Options (must precede files):
 -R, --recursive		Recursively compact files within directories
 
 -h, -?, --help		Show this help screen
--v, --version		Show version information
+-V, --version		Show version information
 --			Treat remaining arguments as files/directories
 
 	EOF
@@ -275,7 +275,7 @@ while [[ "$1" == -* ]]; do
 
 		(-R|--recursive)	recursive=yes ;;
 
-		(-v|--version)		version ;;
+		(-V|--version)		version ;;
 
 		(--)			shift
 					break ;;
